# SmallLM

./: .gitignore  CHAT.md  DEPLOYMENT.md  GPT_Implementation_Plan.md  README.md  deploy_vast.sh  pyproject.toml  test_basic.py
configs/: model_config.py
inference/: __init__.py  generator.py
model/: __init__.py  attention.py  layers.py  positional.py  transformer.py
scripts/: download_data.py  generate.py  train.py
tests/: test_model.py
training/: __init__.py  optimizer.py  trainer.py  utils.py
